--- a/views/login.hbs
+++ b/views/login.hbs
@@ -14,6 +14,7 @@
 	<ul>
 		<li><a href='/'>Home</a></li>
 		<li><a href='/login'>Login</a></li>
+		<li><a href='/register'>Register</a></li>
 	</ul>
 	</nav>
 	<div class='container mt-4'>
@@ -30,11 +31,11 @@
 						<form action='/login' method='post'>
 							<div class='form-group mb-4'>
 								<label for='name'>Name</label>
-								<input type='text' class='form-control' id='name' value="drpaul" name='name' />
+								<input type='text' class='form-control' id='name' name='name' />
 							</div>
 							<div class='form-group mb-4'>
 								<label for='password'>Password</label>
-								<input type='password' class='form-control' value="1234" id='password' name='password' />
+								<input type='password' class='form-control' id='password' name='password' />
 							</div>
 							<button type='submit' class='btn btn-primary mt-1'>Login</button>
 					</div>
