--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1.0' />
 	<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css' />
 	<link rel="stylesheet" href="styles/style.css">
-	<title>Document</title>
+	<title>Home</title>
 	</head>
 
 <body>
@@ -14,6 +14,7 @@
 		<ul>
 			<li><a href='/'>Home</a></li>
 			<li><a href='/login'>Login</a></li>
+			<li><a href='/register'>Register</a></li>
 		</ul>
 		</nav>
 		<div class='container mt-4'>
