--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,12 +2,9 @@
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link
-      rel='stylesheet'
-      href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css'
-    />
-    <link rel='stylesheet' href='style.css' />
-    <title>Document</title>
+<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css' />
+<link rel="stylesheet" href="styles/style.css">
+<title>Register</title>
 	</head>
 	
 	<body>
