--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -27,9 +27,7 @@ nav ul li a:hover {
 .body_section {
     width: 76%;
     margin: 20px auto;
-    border: 1px solid rgb(219, 205, 205);
-    box-shadow: 1px 1px 5px gray;
-        /* border-radius: 5px; */
+    border: 2px solid rgb(219, 205, 205);
 }
 
 .profile {
@@ -45,7 +43,6 @@ nav ul li a:hover {
 
 .profile .image img {
     border: 2px solid rgb(168, 161, 161);
-    /* border-radius: 5px; */
     padding: 5px;
 }
 
@@ -105,7 +102,6 @@ nav ul li a:hover {
     border: 2px solid gray;
     /* border-radius: 10px; */
     margin: 30px auto;
-    box-shadow: 1px 1px 2px gray;
 }
 
 .summary #care_team,
@@ -166,4 +162,46 @@ table {
 .summary #allergies .section_label,
 .summary #lab_tests .section_label {
     text-align: left;
+}
+.highcharts-figure,
+.highcharts-data-table table {
+    min-width: 360px;
+    max-width: 800px;
+    margin: 1em auto;
+}
+
+.highcharts-data-table table {
+    font-family: Verdana, sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #ebebeb;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+}
+
+.highcharts-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+
+.highcharts-data-table th {
+    font-weight: 600;
+    padding: 0.5em;
+}
+
+.highcharts-data-table td,
+.highcharts-data-table th,
+.highcharts-data-table caption {
+    padding: 0.5em;
+}
+
+.highcharts-data-table thead tr,
+.highcharts-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+
+.highcharts-data-table tr:hover {
+    background: #f1f7ff;
 }
