--- a/views/patient.hbs
+++ b/views/patient.hbs
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+        <script src="https://code.highcharts.com/highcharts.js"></script>
+        <script src="https://code.highcharts.com/modules/series-label.js"></script>
+        <script src="https://code.highcharts.com/modules/export-data.js"></script>
+        <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css' />
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -125,6 +129,8 @@
                             <th>Quantity</th>
                             <th>Brand Name</th>
                             <th>Generic Name</th>
+                            <th>Time to Take</th>
+                            <th>Taken Today</th>
                         </tr>
                     </thead>
                     <tbody class="medicationInfo">
@@ -136,18 +142,21 @@
                             <td>{{quantity}}</td>
                             <td>{{brand_name}}</td>
                             <td>{{generic_name}}</td>
+                            <td>{{time}}</td>
+                            <td>
+                                {{#if taken}}
+                                    true
+                                {{else}}
+                                    false
+                                {{/if}}
                         </tr>
                         {{/each}}
                     </tbody>
                 </table>
             </div>
-            {{!-- <div id="allergies">
-                <div class="section_label">Allergies</div>
-                No Allergies Identified
-            </div> --}}
             <div id="lab_tests">
                 <div class="section_label">Analytics</div>
-                <table>
+                {{!-- <table>
                     <thead>
                         <tr>
                             <th>id</th>
@@ -208,7 +217,10 @@
                             <td>3 mins</td>
                         </tr>
                     </tbody>
-                </table>
+                </table> --}}
+                <div id="chart1" style="margin:20px 0 60px 0;"></div>
+                <div id="chart2" style="margin: 60px 0 60px 0;"></div>
+                <div id="chart3" style="margin: 60px 0 0 0;"></div>
             </div>
         </div>
     </div>
@@ -274,6 +286,251 @@
             $("#lab_tests").show();
         });
     });
+
+    Highcharts.chart('chart1', {
+        chart: {
+            type: 'line',
+        },
+        title: {
+            text: "Ingestion time per medication",
+        },
+        legend: {
+            enabled: false,
+        },
+        credits: {
+            enabled: false,
+        },
+
+        subtitle: {
+            text: null,
+            align: 'left'
+        },
+
+        yAxis: {
+            title: {
+                text: 'Ingestion time per medication (in minutes)'
+            }
+        },
+
+        xAxis: {
+            title: {
+                text: null
+            },
+            type: 'category'
+        },
+
+        series: [
+            {
+                name: 'Medicines',
+                colorByPoint: true,
+                data: [
+                    {
+                        name: "Silicia",
+                        y: 1
+                    },
+                    {
+                        name: "Naproxen",
+                        y: 2
+                    },
+                    {
+                        name: "Acetaminophen",
+                        y: 3
+                    },
+                    {
+                        name: "Lidocaine",
+                        y: 2
+                    },
+                    {
+                        name: "Ibuprofin",
+                        y: 2
+                    },
+                    {
+                        name: "Glycerin",
+                        y: 4
+                    },
+                    {
+                        name: "Salicycli Acid",
+                        y: 3
+                    }
+                ],
+            }
+        ]
+    });
+    Highcharts.chart('chart2', {
+        chart: {
+            type: 'pie',
+        },
+        title: {
+            text: "Alarm response time",
+        },
+        legend: {
+            enabled: false,
+        },
+        credits: {
+            enabled: false,
+        },
+
+        subtitle: {
+            text: null,
+            align: 'left'
+        },
+
+        yAxis: {
+            title: {
+                text: 'Ingestion time per medication (in minutes)'
+            }
+        },
+
+        xAxis: {
+            title: {
+                text: null
+            },
+            type: 'category'
+        },
+        accessibility: {
+            announceNewData: {
+                enabled: true
+            }
+        },
+        plotOptions: {
+            series: {
+                allowPointSelect: true,
+                cursor: 'pointer',
+                dataLabels: [{
+                    enabled: true,
+                    distance: 20
+                }, {
+                    enabled: true,
+                    distance: -40,
+                    format: '{point.y} mins',
+                    style: {
+                        textOutline: 'none',
+                    },
+                }]
+            }
+        },
+
+        series: [
+            {
+                name: 'Medicines',
+                colorByPoint: true,
+                data: [
+                    {
+                        name: "Silicia",
+                        y: 5
+                    },
+                    {
+                        name: "Naproxen",
+                        y: 7
+                    },
+                    {
+                        name: "Acetaminophen",
+                        y: 4
+                    },
+                    {
+                        name: "Lidocaine",
+                        y: 8
+                    },
+                    {
+                        name: "Ibuprofin",
+                        y: 6
+                    },
+                    {
+                        name: "Glycerin",
+                        y: 8
+                    },
+                    {
+                        name: "Salicycli Acid",
+                        y: 9
+                    }
+                ],
+            }
+        ]
+    });
+    Highcharts.chart('chart3', {
+        chart: {
+            type: 'column',
+        },
+        title: {
+            text: "Medication ingestion failure rate over 30 Days",
+        },
+        legend: {
+            enabled: false,
+        },
+        credits: {
+            enabled: false,
+        },
+
+        subtitle: {
+            text: null,
+            align: 'left'
+        },
+
+        yAxis: {
+            title: {
+                text: 'ingestion failure rate'
+            }
+        },
+
+        xAxis: {
+            title: {
+                text: null
+            },
+            type: 'category'
+        },
+        accessibility: {
+            announceNewData: {
+                enabled: true
+            }
+        },
+        plotOptions: {
+            series: {
+                borderWidth: 0,
+                dataLabels: {
+                    enabled: true,
+                    format: '{point.y}%'
+                }
+            }
+        },
+
+        series: [
+            {
+                name: 'Medicines',
+                colorByPoint: true,
+                data: [
+                    {
+                        name: "Silicia",
+                        y: 2
+                    },
+                    {
+                        name: "Naproxen",
+                        y: 5
+                    },
+                    {
+                        name: "Acetaminophen",
+                        y: 3
+                    },
+                    {
+                        name: "Lidocaine",
+                        y: 1
+                    },
+                    {
+                        name: "Ibuprofin",
+                        y: 4
+                    },
+                    {
+                        name: "Glycerin",
+                        y: 2
+                    },
+                    {
+                        name: "Salicycli Acid",
+                        y: 1
+                    }
+                ],
+            }
+        ]
+    });
+
 </script>
 
 </html>
